Adding CalTrack project

--- a/docker-compose-aws.yml
+++ b/docker-compose-aws.yml
@@ -9,6 +9,7 @@ services:
         - AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
         - AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
         - AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION
+        - AWS_S3_BUCKET_URI=$AWS_S3_BUCKET_URI
     container_name: nginx
     ports:
       - "80:80"
